--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,22 @@ img {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
+  position: relative;
+  transition-property:color;
+  transition-duration: 0.25s;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0s;
+}
+.item-img:hover::after{
+  display: block;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background: #2196F3;
+  border-radius: 2px;
+  bottom: -10;
+  margin-top: 28px;
 }
 .list-auth{
   display: flex;
@@ -84,12 +100,17 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   padding-left: 0;
+  transition-property:color;
+  transition-duration: 0.25s;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0s;
 }
 .list-item:not(:last-child) {
   margin-right: 50px;
 }
 .list-item a:hover {
   color: var(--highlight-color);
+
 }
 .list-item a:focus {
   color: var(--highlight-color);
@@ -110,6 +131,10 @@ img {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
+  transition-property:color;
+  transition-duration: 0.25s;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0s;
 }
 .list-mail:hover {
   color: var(--highlight-color);
@@ -126,6 +151,10 @@ img {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
+  transition-property:color;
+  transition-duration: 0.25s;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0s;
 }
 .list-tel:hover {
   color: var(--highlight-color);
@@ -228,9 +257,28 @@ img {
 }
 .img-list {
   margin-right: 30px;
+  position: relative;
 }
 .img-list:last-child {
   margin-right: 0;
+}
+.img-list-text {
+font-family:var(--main-font);
+position: absolute;
+width: 370px;
+height: 70px;
+top: 224px;
+color:rgba(255, 255, 255, 1);
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+justify-content: center;
+align-items: center;
+display: flex;
+background-color: rgba(47, 48, 58, 0.8);
+margin: 0;
+text-transform: uppercase;
+
 }
 /* section content */
 .content {
@@ -316,6 +364,11 @@ img {
   width: 44px;
   height: 44px;
   color:rgba(175, 177, 184, 1);
+  border-radius: 50%;
+  transition-property:color,background-color;
+  transition-duration: 0.25s;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0s;
 }
 .holder-text{
   margin-right: 10px;
@@ -323,7 +376,7 @@ img {
 .holder-icons:hover{
   color:var(--white-color);
   background-color:var(--highlight-color);
-  border-radius: 50%;
+  
 }
 .icon-holder{
   display: flex;
@@ -334,7 +387,6 @@ img {
 .holder-icons:focus{
   color:var(--white-color);
   background-color:var(--highlight-color);
-  border-radius: 50%;
 }
 /* section */
 .clients-href {
@@ -346,6 +398,10 @@ img {
   align-items: center;
   justify-content: center;
   color:rgba(175, 177, 184, 1);
+  transition-property:color,border;
+  transition-duration: 1s;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0s;
 }
 .clients-link {
   display: flex;
@@ -405,6 +461,10 @@ img {
   line-height: 1.7;
   font-style: normal;
   margin-top: 20px;
+  transition-property:color;
+  transition-duration: 0.25s;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0s;
 }
 .adress-link {
   color: #ffffff99;
@@ -413,6 +473,10 @@ img {
   line-height: 1.7;
   font-style: normal;
   margin-top: 9px;
+  transition-property:color;
+  transition-duration: 0.25s;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0s;
 }
 .adress-list:hover {
   color: var(--highlight-color);
@@ -438,7 +502,8 @@ margin-top: 0;
  .adress{
   display: flex;
 }
-.footer-icon-list {margin-right: 10px;
+.footer-icon-list {
+  margin-right: 10px;
 }
 .footer-icon-list:last-child{margin-right: 0;
 }
@@ -456,7 +521,10 @@ margin-top: 0;
   border-radius: 50%;
   background-color: #FFFFFF1A;
   color:var(--white-color);
-  margin-right: 10px;
+  transition-property:background-color;
+  transition-duration: 0.25s;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0s;
 }
 .icon-link:last-child{
   margin-right: 0;
@@ -492,6 +560,10 @@ margin-top: 0;
   padding: 6px 22px;
   margin-right: 8px;
   margin-bottom: 50px;
+  transition-property:color,background-color;
+  transition-duration: 0.25s;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0s;
 }
 .filter-button:active {
   color: var(--white-color);
@@ -565,9 +637,13 @@ margin-top: 0;
   padding: 0;
 }
 .grid {
-  display: block;
   margin-bottom: 30px;
   margin-right: 30px;
+  transition-property:box-shadow;
+  transition-duration: 0.25s;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0s;
+  display: inline-block;
 }
 .grid:hover{
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),0px 4px 4px 0px rgba(0, 0, 0, 0.06),0px 1px 1px 0px rgba(0, 0, 0, 0.12);
@@ -588,3 +664,77 @@ margin-top: 0;
 .grid:nth-child(3n + 3) {
   margin-right: 0;
 }
+.grid-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding: 0 24px;
+  font-size: 18px;
+  margin: 0;
+  line-height: 1.56;
+  transform: translate(-50%,-50%);
+  color:var(--white-color);
+}
+.overlay-text{
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.overlay{
+  position: relative;
+  overflow: hidden;
+}
+.overlay:hover .overlay-text{
+  opacity: 1;
+  transform: translateY(0);
+}
+.modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 528px;
+  min-height: 581px;
+  transform: translate(-50%,-50%);
+  background-color: var(--white-color);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color:rgb(0,0,0,0.2);
+}
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+.icon-exit{
+  width: 11px;
+  height: 11px;
+  fill:currentColor;
+  border-radius: 50%;
+
+}
+.exit-button{
+  width: 30px;
+  height: 30px;
+  color:rgba(0, 0, 0, 1);
+  background-color: #fff;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transform: translate(490px,8px);
+  
